--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
+    "react-scroll": "^1.9.0",
     "ts-standard": "^12.0.2"
   },
   "devDependencies": {
@@ -23,6 +24,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-scroll": "^1.8.10",
     "eslint": "^9.11.1",
     "eslint-plugin-react": "^7.36.1",
     "globals": "^15.9.0",
